[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rlm-agent-bridge"
version = "0.1.0"
description = "A thin Codex CLI backend adapter for alexzhang13/rlm."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "pvndvc0de" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]

[project.optional-dependencies]
rlm = ["rlms>=0.1.2"]
dev = []

[project.scripts]
rlm-agent-bridge = "rlm_agent_bridge.cli:main"

[project.urls]
Repository = "https://github.com/pvndvc0de/rlm-agent-bridge"
Issues = "https://github.com/pvndvc0de/rlm-agent-bridge/issues"

[tool.setuptools.packages.find]
include = ["rlm_agent_bridge", "rlm_agent_bridge.*"]
